2005-04-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Fix a mem leak, and simplify the code for little endian case.

2005-04-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/thumbnailer.schemas.in:
	* po/POTFILES.in:

	Add schema file to POTFILES.in, and change a few strings in the
	schema.

2005-04-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/Listener.cpp:
	* src/Listener.h:
	* src/main.cpp:

	Use nsIWebBrowserSetup to disable global history and redirects,
	as well as frames.

2005-04-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/main.cpp:

	Check for NULL arguments.

2005-04-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Fix rounding in thumbnail height calculation.

	* src/main.cpp:

	Remove --thumbnail option from gnome-web-photo, and add defaults to
	--width and --size.

2005-04-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/Components.cpp:
	* src/Components.h:
	* src/Makefile.am:
	* src/main.cpp:

	Add dummy prompt service implementation which always returns
	cancel.

2005-04-23  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:

	Disable formfill and password manager.

	* src/Writer.cpp:

	Sanity check.
	
2005-04-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Less debug output.

2005-04-23  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/main.cpp:

	Hack to get background images to load before onload.
	Many thanks to biesi for giving me the hint that made me
	think of this hack!
	
2005-04-23  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/Makefile.am:
	* src/Writer.cpp:
	* src/Writer.h:
	* src/main.cpp:

	And remove it again.

2005-04-23  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/Makefile.am:
	* src/Writer.cpp:
	* src/Writer.h:
	* src/main.cpp:

	Add JPEG as optional output file format.

2005-04-22  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Fix thumbnail aspect ratio.
