@@ -1,3 +1,10 @@
+2005-05-10  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/Listener.cpp:
+	* src/Listener.h:
+
+	Fix for mozilla API change to nsIDOMLoadListener.
+
 2005-04-26  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/Writer.cpp:
